--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,6 +30,8 @@
         <java.version>22</java.version>
         <sonar.organization>accesscoder</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.organization>julianeschrittenlacher</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
